thickbox z-index issue fixed

--- a/app/assets/css/rtwpideas-client-styles.css
+++ b/app/assets/css/rtwpideas-client-styles.css
@@ -268,3 +268,9 @@ figure {
     -webkit-border-radius: 5px; /* Saf3-4 */
     border-radius: 5px; /* Opera 10.5, IE 9, Saf5, Chrome */
 }
+#TB_overlay{
+    z-index: 999;
+}
+#TB_window{
+    z-index: 9999;
+}
